# kchess-engine

./: .gitignore  Readme.md
app/: CMakeLists.txt
app/src/: Board.cpp  Board.h  CLI.cpp  CMakeLists.txt  Piece.cpp  Piece.h  main.cpp
app/unit_tests/: CMakeLists.txt  app_unit_tests.cpp
src/: CMakeLists.txt
src/ChessLib/: Board.cpp  Board.h  CMakeLists.txt  ChesslibAPI.h  Common.cpp  Common.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  IPlayer.h  ImportExportUtils.cpp  ImportExportUtils.h  Piece.cpp  Piece.h  Pieces.cpp  Pieces.h
src/ChessLib/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
src/app/: Board.h  CLI.h  CMakeLists.txt  Piece.cpp  PlayerCLI.cpp  PlayerCLI.h  main.cpp
src/random_exp_app/: CMakeLists.txt  main.cpp
src/unit_tests/: BishopUnitTests.cpp  BoardUnitTests.cpp  CMakeLists.txt  CommonUnitTests.cpp  CorrectMovesTests.cpp  GameUnitTests.cpp  ImportExportUtilsTests.cpp  KnightUnitTests.cpp  PawnUnitTests.cpp  PieceUnitTests.cpp  QueenUnitTests.cpp  RookUnitTests.cpp
